@@ -10,6 +10,8 @@ inc/Test/Run/Builder.pm
 lib/HTML/Widgets/NavMenu/ToJSON.pm
 lib/HTML/Widgets/NavMenu/ToJSON/Data_Persistence.pm
 lib/HTML/Widgets/NavMenu/ToJSON/Data_Persistence/YAML.pm
+scripts/bump-version-number.pl
+scripts/tag-release.pl
 t/00-load.t
 t/cpan-changes.t
 t/manifest.t
