@@ -20,11 +20,11 @@ HTML::Widgets::NavMenu::ToJSON::Data_Persistence - Data persistence base class.
 
 =head1 VERSION
 
-Version 0.0.3
+Version 0.0.4
 
 =cut
 
-our $VERSION = '0.0.3';
+our $VERSION = '0.0.4';
 
 
 =head1 SYNOPSIS
